Avançando nas funcionalidades JS

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
     <div class="segundo-header">
         <ul>
-            <li>Nºlivros: 0</li>
+            <li class="quantidade-livros">Nºlivros: 0</li>
             <li>
                 <div class="bolinha-verde"></div> Terminados
             </li>
@@ -58,7 +58,7 @@
                 Lendo
             </li>
 
-            <li>0 Páginas Lidas</li>
+            <li class="paginas-lidas">0 Páginas Lidas</li>
         </ul>
     </div>
     <main>
@@ -129,7 +129,10 @@
             </div> 
         </div>
         <div id="minha-lista">
-            <div class="mensagem-inicial">
+            <div class="conteudo-principal2">
+
+            </div>
+            <div id="mensagem-inicial">
                 <p>Nenhum livro por aqui ainda :(</p>
                 <p class="segundo-texto">Pesquise por um livro que você goste e adicione-o à sua lista</p>
             </div>
