Adicionando mais funcionalidades e arrumando arquivos

--- a/index.html
+++ b/index.html
@@ -82,6 +82,26 @@
         <div id="conteudo-principal">
             <div class="livros">
                 <i class="fas fa-plus"></i>
+                <img src="img/Coraline.jpg">
+                <p class="nome-livro">Coraline - Neil Gaiman</p>
+            </div> 
+            <div class="livros">
+                <i class="fas fa-plus"></i>
+                <img src="img/algoritmos.jpg">
+                <p class="nome-livro">Algoritmos e Lógica de Programação - Ricardo Concilio</p>
+            </div> 
+            <div class="livros">
+                <i class="fas fa-plus"></i>
+                <img src="img/redes-de-computadores.jpg">
+                <p class="nome-livro">Redes de Computadores - Andrew S. Tanenbaum</p>
+            </div> 
+            <div class="livros">
+                <i class="fas fa-plus"></i>
+                <img src="img/A-rainha-vermelha.jpg">
+                <p class="nome-livro">A Rainha Vermelha - Victoria Aveyard</p>
+            </div> 
+            <div class="livros">
+                <i class="fas fa-plus"></i>
                 <img class="ACBF" src="img/81qFdOvnxaL.jpg" alt="ACBlackFlag">
                 <p class="nome-livro">Assassins Creed: Black Flag - Oliver Bowden</p>
             </div>
@@ -131,7 +151,7 @@
         <div id="minha-lista">
             <div class="conteudo-principal2">
 
-            </div>
+        </div>
             <div id="mensagem-inicial">
                 <p>Nenhum livro por aqui ainda :(</p>
                 <p class="segundo-texto">Pesquise por um livro que você goste e adicione-o à sua lista</p>
